--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 <script>
     const hideFullScreenButton = "";
     const buildUrl = "Build";
-    const loaderUrl = buildUrl + "/vkgame-craftconflict.loader.js";
+    const loaderUrl = buildUrl + "/vkgame-parkour.loader.js";
     const config = {
-        dataUrl: buildUrl + "/vkgame-craftconflict.data.unityweb",
-        frameworkUrl: buildUrl + "/vkgame-craftconflict.framework.js.unityweb",
-        codeUrl: buildUrl + "/vkgame-craftconflict.wasm.unityweb",
+        dataUrl: buildUrl + "/vkgame-parkour.data.unityweb",
+        frameworkUrl: buildUrl + "/vkgame-parkour.framework.js.unityweb",
+        codeUrl: buildUrl + "/vkgame-parkour.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "New Unity Projectcraft_platformer",
